<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ejercicio_adapters_1"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginBottom="20dp"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/alarma"
                android:layout_marginRight="20dp"
                android:textColor="@color/white"
                android:onClick="irAlarmas"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="10dp"
                android:text="@string/reproduccion"
                android:textColor="@color/white"
                android:onClick="irReproctor"
                />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>